--- a/client/one/app/features/entity-manager/views/ad-group-settings-drawer/ad-group-settings-drawer.view.less
+++ b/client/one/app/features/entity-manager/views/ad-group-settings-drawer/ad-group-settings-drawer.view.less
@@ -136,6 +136,14 @@
             flex-basis: 50%;
         }
 
+        .zem-geo-targeting__list:first-child {
+            margin-right: 20px;
+        }
+
+        .zem-geo-targeting__list:last-child {
+            margin-top: 0px;
+        }
+
         .zem-geo-targeting__list > .zem-select-list__content {
             height: 100%;
         }
